Log the time interval between adjacent JumpList update notifications

This CL logs the time interval between adjacent update notifications
that fall into the 3500 ms interval. This helps to develop a better
delay strategy.

BUG=733034
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.win:win10_chromium_x64_rel_ng

Review-Url: https://codereview.chromium.org/2966123002
Cr-Commit-Position: refs/heads/master@{#484341}

Former-commit-id: feded507d0e942303f1ac97140059411c0401e43